<resources>
    <string name="app_name">Desapa POS</string>
    <string name="syncing_data">Syncing data</string>
    <string name="syncing_store_data">Syncing Store Data</string>
    <string name="syncing_product_categories">Syncing Product Categories</string>
    <string name="syncing_products">Syncing Products</string>
    <string name="syncing_staffs">Syncing Staffs</string>
    <string name="syncing_staff_positions">Syncing Staff Positions</string>
    <string name="syncing_printer_templates">Syncing Printer Templates</string>
    <string name="syncing_locations">Syncing Locations</string>
    <string name="syncing_payment_methods">Syncing Payment Methods</string>
    <string name="syncing_tables">Syncing Tables</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="success">Success</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_is_not_exist">Product is not exist</string>
    <string name="order_completed_error">Order has been completed</string>
    <string name="payment">Payment</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="tax">Tax (Incl.)</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="order_number_display">No %1s</string>
    <string name="order_number_label">No</string>
    <string name="order_type_eat_in">Eat In</string>
    <string name="order_type_takeaway">Takeaway</string>
    <string name="table_is_not_available">Table is not available</string>
    <string name="table_number">Table Number</string>
    <string name="select_order_type">Select Order Type</string>
    <string name="general">General</string>
    <string name="printers">Printers</string>
    <string name="add_printer">Add Printer</string>
    <string name="error_bluetooth_disabled">Bluetooth is not enabled!</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported!</string>
    <string name="select_printer">Select Printer</string>
    <string name="printer_settings">Printer Settings</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="adult_male">Adult Male</string>
    <string name="child_female">Child Female</string>
    <string name="child_male">Child Male</string>
    <string name="save">Save</string>
    <string name="adult_female">Adult Female</string>
    <string name="note">Note</string>
    <string name="quantity">Quantity</string>
    <string name="takeaway_badge">T</string>
    <string name="invoice">Invoice</string>
    <string name="staff">Staff</string>
    <string name="customer">Customer</string>
    <string name="timestamp">Timestamp</string>
    <string name="order_details">Order Details</string>
    <string name="search_product">Search Product</string>
    <string name="item_quantity_error">Quantity must be greater than 0</string>
    <string name="cancel">Cancel</string>
    <string name="version_display">Version %1s</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="staff_assignments">Staff Assignments</string>
    <string name="staff_original_location">Original: %1s</string>
    <string name="assign">Assign</string>
    <string name="waiter">Waiter</string>
    <string name="select_waiter">Select Waiter</string>
    <string name="sale_completed">Sale Completed!</string>
    <string name="change_required_subtitle">Change required from %1s</string>
    <string name="back">Back</string>
    <string name="enter_payment_amount">Enter payment amount</string>
    <string name="amount_tendered_is_less_than_the_order_total">Amount tendered is less than the order total.</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_address">Printer Address</string>
    <string name="_80_mm">80 mm</string>
    <string name="_58_mm">58 mm</string>
    <string name="select_printer_locations">Select Printer Locations</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="edit_printer">Edit Printer</string>
</resources>