<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.desapabandara.pos.ui.viewmodel.EditPrinterViewModel" />

        <import type="com.desapabandara.pos.printer.model.PaperWidth"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:onClick="@{() -> void}">

        <include
            android:id="@+id/top_bar"
            layout="@layout/layout_top_bar_back"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/printer_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:hint="@string/printer_name"
                android:text="@={vm.printerData.name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/printer_address_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/printer_name_layout"
            app:layout_constraintStart_toStartOf="@id/printer_name_layout"
            app:layout_constraintEnd_toEndOf="@id/printer_name_layout"
            android:layout_marginTop="16dp"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/printer_address"
                android:text="@{vm.printerData.address}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/paper_width_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/printer_address_layout"
            app:layout_constraintStart_toStartOf="@id/printer_address_layout"
            app:layout_constraintEnd_toEndOf="@id/printer_address_layout"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/paper_width_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_80_mm"
                android:layout_weight="1"
                android:checked='@{vm.printerData.paperWidth == PaperWidth.W80.width}'/>

            <RadioButton
                android:id="@+id/paper_width_58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_58_mm"
                android:layout_weight="1"
                android:checked='@{vm.printerData.paperWidth == PaperWidth.W58.width}'/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_select_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_printer_locations"
            app:layout_constraintTop_toBottomOf="@id/paper_width_group"
            app:layout_constraintStart_toStartOf="@id/paper_width_group"
            android:layout_marginTop="24dp"
            android:textColor="@color/black_1a"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.isAllLocationSelected ? @string/deselect_all : @string/select_all}"
            tools:text="Select All"
            app:layout_constraintTop_toTopOf="@id/tv_select_locations"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_locations"
            app:layout_constraintEnd_toEndOf="@id/paper_width_group"
            android:onClick="@{() -> vm.toggleSelectAllLocations()}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_printer_locations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_select_locations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_printer_location_select"/>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save"
            android:gravity="center"
            android:background="?attr/colorPrimary"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="@{() -> vm.savePrinterData()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>