<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.desapabandara.pos.ui.viewmodel.AddCustomerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:onClick="@{() -> vm.dismiss()}">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".85"/>

        <View
            android:id="@+id/bg_add_customer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_guide"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_white_rounded"
            android:onClick="@{() -> void}"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_details"
            app:layout_constraintTop_toTopOf="@id/bg_add_customer"
            app:layout_constraintStart_toStartOf="@id/bg_add_customer"
            app:layout_constraintEnd_toEndOf="@id/bg_add_customer"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black_1a"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/bg_add_customer"
            app:layout_constraintEnd_toEndOf="@id/bg_add_customer"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/customer_name"
                android:text="@={vm.customerName}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adult_male_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/customer_name_layout"
            app:layout_constraintStart_toStartOf="@id/customer_name_layout"
            app:layout_constraintEnd_toStartOf="@id/adult_female_layout"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/adult_male"
                android:text="@={vm.adultMaleCount}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adult_female_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/adult_male_layout"
            app:layout_constraintStart_toEndOf="@id/adult_male_layout"
            app:layout_constraintEnd_toEndOf="@id/bg_add_customer"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/adult_female"
                android:text="@={vm.adultFemaleCount}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child_male_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adult_male_layout"
            app:layout_constraintStart_toStartOf="@id/adult_male_layout"
            app:layout_constraintEnd_toEndOf="@id/adult_male_layout"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/child_male"
                android:text="@={vm.childMaleCount}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child_female_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/child_male_layout"
            app:layout_constraintStart_toStartOf="@id/adult_female_layout"
            app:layout_constraintEnd_toEndOf="@id/adult_female_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/child_female"
                android:text="@={vm.childFemaleCount}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/new_customer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Customer"
            app:layout_constraintTop_toBottomOf="@id/child_male_layout"
            app:layout_constraintStart_toStartOf="@id/child_male_layout"
            android:layout_marginTop="8dp"
            android:checked="@{vm.isNewCustomer}"/>

        <View
            android:id="@+id/new_customer_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/new_customer_checkbox"
            app:layout_constraintBottom_toBottomOf="@id/new_customer_checkbox"
            app:layout_constraintStart_toStartOf="@id/new_customer_checkbox"
            app:layout_constraintEnd_toEndOf="@id/new_customer_checkbox"
            android:onClick="@{() -> vm.toggleNewCustomer()}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/bg_add_customer"
            app:layout_constraintStart_toStartOf="@id/bg_add_customer"
            app:layout_constraintEnd_toEndOf="@id/bg_add_customer"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.addCustomer()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>