<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.desapabandara.pos.ui.viewmodel.SettingsViewModel" />

        <import type="com.desapabandara.pos.model.ui.SettingsScreen"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/main_top_bar"
            layout="@layout/layout_top_bar"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_top_bar"
            app:layout_constraintBottom_toTopOf="@id/text_version"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_general"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/general"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:onClick="@{() -> vm.selectSetting(SettingsScreen.General)}"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/settings_staff_assignments"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/staff_assignments"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:onClick="@{() -> vm.selectSetting(SettingsScreen.StaffAssignments)}"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/settings_printers"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/printers"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:onClick="@{() -> vm.selectSetting(SettingsScreen.Printers)}"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <include
            android:id="@+id/text_version"
            layout="@layout/layout_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>