<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.desapabandara.pos.ui.viewmodel.ItemDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:onClick="@{() -> vm.dismiss()}">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".85"/>

        <View
            android:id="@+id/bg_item_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_guide"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_white_rounded"
            android:onClick="@{() -> void}"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Item Name"
            android:text="@{vm.itemName}"
            app:layout_constraintTop_toTopOf="@id/bg_item_details"
            app:layout_constraintStart_toStartOf="@id/bg_item_details"
            app:layout_constraintEnd_toEndOf="@id/bg_item_details"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black_1a"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/remove_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_primary_rounded"
            android:src="@drawable/ic_minus"
            android:scaleType="centerInside"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/bg_item_details"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> vm.decreaseQty()}"/>

        <ImageView
            android:id="@+id/add_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_primary_rounded"
            android:src="@drawable/ic_plus"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="@id/remove_btn"
            app:layout_constraintEnd_toEndOf="@id/bg_item_details"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> vm.increaseQty()}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/qty_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/remove_btn"
            app:layout_constraintStart_toEndOf="@id/remove_btn"
            app:layout_constraintEnd_toStartOf="@id/add_btn"
            app:layout_constraintBottom_toBottomOf="@id/remove_btn"
            android:layout_marginHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/quantity"
                android:text="@={vm.quantity}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/qty_layout"
            app:layout_constraintStart_toStartOf="@id/remove_btn"
            app:layout_constraintEnd_toEndOf="@id/add_btn"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/note"
                android:text="@={vm.note}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_takeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/note_layout"
            app:layout_constraintStart_toStartOf="@id/note_layout"
            android:layout_marginTop="8dp"
            android:checked="@={vm.isTakeaway}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type_takeaway"
            app:layout_constraintTop_toTopOf="@id/check_takeaway"
            app:layout_constraintBottom_toBottomOf="@id/check_takeaway"
            app:layout_constraintStart_toEndOf="@id/check_takeaway"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/bg_item_details"
            app:layout_constraintStart_toStartOf="@id/bg_item_details"
            app:layout_constraintEnd_toEndOf="@id/bg_item_details"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.save()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>